# miniclaw

./: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml
docs/: design.zh.md
locales/: en.json  zh-CN.json
src/: i18n.rs  lib.rs  main.rs  state.rs  utils.rs  wecom.rs
src/channels/: mod.rs  traits.rs  wecom.rs
src/config/: mod.rs  schema.rs
src/handlers/: mod.rs  wecom.rs
src/wecom/: crypto.rs  mod.rs  types.rs
