[package]
name = "miniclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
toml = "0.8"
bytes = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
rust-i18n = "3.1"
sys-locale = "0.3"
tracing-appender = "0.2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"

[dev-dependencies]
tempfile = "3.10"
